deployments/monitoring/grafana-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: monitoring-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
