deployments/monitoring/prometheus-ingress.yaml

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: monitoring-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
